Fix tests for ParserUtil